--- a/portfolio.html
+++ b/portfolio.html
@@ -35,11 +35,26 @@
         <h1>Portfolio</h1>
         <hr />
         <section>
-          <img class="img" src="./images/technics-q-c-640-480-1.jpg" alt="sekil" />
-          <img class="img" src="./images/technics-q-c-640-480-2.jpg" alt="sekil" />
-          <img class="img" src="./images/technics-q-c-640-qulaqciq.jpg" alt="sekil" />
-          <img class="img" src="./images/technics-q-c-640-telefon qulaqciq.jpg" alt="sekil" />
-          <img class="img" src="./images/technics-q-c-640-48 TV.jpg" alt="sekil" />
+          <div class="project">
+            <img src="./images/technics-q-c-640-480-1.jpg" alt="sekil" />
+            <h3>Hangman</h3>
+          </div>
+          <div class="project">
+            <img src="./images/technics-q-c-640-480-2.jpg" alt="sekil" />
+            <!-- <h3>Hangman</h3> -->
+          </div>
+          <div class="project">
+            <img src="./images/technics-q-c-640-qulaqciq.jpg" alt="sekil" />
+            <!-- <h3>Hangman</h3> -->
+          </div>
+          <div class="project">
+            <img src="./images/technics-q-c-640-telefon qulaqciq.jpg" alt="sekil" />
+            <!-- <h3>Hangman</h3> -->
+          </div>
+          <div class="project">
+            <img src="./images/technics-q-c-640-48 TV.jpg" alt="sekil" />
+            <!-- <h3>Hangman</h3> -->
+          </div>
         </section>
       </div>
       <aside class="aside">
