--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
           <li>
             <a href="http://127.0.0.1:5500/about.html" target="_blank">About</a>
           </li>
-          <li><a href="#">Portfolio</a></li>
+          <li><a href="http://127.0.0.1:5500/portfolio.html">Portfolio</a></li>
           <li>
             <a href="http://127.0.0.1:5500/contact.html" target="_blank"
               >Contact</a
