--- a/portfolio.html
+++ b/portfolio.html
@@ -41,19 +41,19 @@
           </div>
           <div class="project">
             <img src="./images/technics-q-c-640-480-2.jpg" alt="sekil" />
-            <!-- <h3>Hangman</h3> -->
+            <h3>Hangman</h3>
           </div>
           <div class="project">
             <img src="./images/technics-q-c-640-qulaqciq.jpg" alt="sekil" />
-            <!-- <h3>Hangman</h3> -->
+            <h3>Hangman</h3>
           </div>
           <div class="project">
             <img src="./images/technics-q-c-640-telefon qulaqciq.jpg" alt="sekil" />
-            <!-- <h3>Hangman</h3> -->
+            <h3>Hangman</h3>
           </div>
           <div class="project">
             <img src="./images/technics-q-c-640-48 TV.jpg" alt="sekil" />
-            <!-- <h3>Hangman</h3> -->
+            <h3>Hangman</h3>
           </div>
         </section>
       </div>
