--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       <a href="#" class="name">Taleh</a>
       <nav class="nav">
         <ul>
-          <li><a href="http://127.0.0.1:5500/about.html">About</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="http://127.0.0.1:5500/about.html" target="_blank">About</a></li>
+          <li><a href="http://127.0.0.1:5500/portfolio.html" target="_blank">Portfolio</a></li>
+          <li><a href="http://127.0.0.1:5500/contact.html" target="_blank">Contact</a></li>
         </ul>
       </nav>
     </header>
