--- a/index.html
+++ b/index.html
@@ -1,79 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My-website</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"
-    defer></script>
-  <link rel="stylesheet" href="./assets/style.css" />
-  <link rel="shortcut icon" href="./images/images (2).jpeg" type="image/x-icon" />
-</head>
-
-<body>
-  <!-- header started -->
-  <main class="container">
-    <nav class="navbar bg-body-tertiary fixed-top mb-5">
-      <div class="container">
-        <a class="navbar-brand name" href="#">Taleh</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
-          aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-          <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Taleh</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-          </div>
-          <div class="offcanvas-body">
-            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Portfolio</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link" href="#">Contact</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </nav>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My-website</title>
+    <link rel="stylesheet" href="./assets/style.css" />
+    <link
+      rel="shortcut icon"
+      href="./images/images (2).jpeg"
+      type="image/x-icon"
+    />
+  </head>
+  <body>
+    <!-- header started -->
+    <header class="head">
+      <a href="#" class="name">Taleh</a>
+      <nav class="nav">
+        <ul>
+          <li><a href="http://127.0.0.1:5500/index.html" target="_blank">About</a></li>
+          <li><a href="http://127.0.0.1:5500/portfolio.html" target="_blank">Portfolio</a></li>
+          <li><a href="http://127.0.0.1:5500/contact.html" target="_blank">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
     <!-- header finished -->
-    <div class="main-general">
-      <div class="left">
-        <h1>About Me</h1>
-        <hr />
-        <img src="./images/download.png" alt="" />
-        <div class="p-p">
-          <p>
-            Marshmallow jelly soufflé pastry biscuit gummi bears tootsie roll
-            tootsie roll gingerbread. Cotton candy muffin gingerbread
-            fruitcake. Sweet roll soufflé topping wafer croissant oat cake
-            gummi bears. <br />
-            Jelly-o cheesecake dessert fruitcake ice cream brownie liquorice
-            soufflé. Caramels biscuit gummi bears tiramisu chupa chups.
-            Croissant macaroon cotton candy cake pudding.
-          </p>
+    <main>
+      <div class="main-general">
+        <div class="left">
+          <h1>About Me</h1>
+          <hr />
+          <img src="./images/download.png" alt="" />
+          <div class="p-p">
+            <p>
+              Marshmallow jelly soufflé pastry biscuit gummi bears tootsie roll
+              tootsie roll gingerbread. Cotton candy muffin gingerbread
+              fruitcake. Sweet roll soufflé topping wafer croissant oat cake
+              gummi bears. <br />
+              Jelly-o cheesecake dessert fruitcake ice cream brownie liquorice
+              soufflé. Caramels biscuit gummi bears tiramisu chupa chups.
+              Croissant macaroon cotton candy cake pudding.
+            </p>
+          </div>
         </div>
+        <aside class="aside">
+          <h2>Connect with Me</h2>
+          <hr />
+          <div class="social">
+          <img
+            class="imgs"
+            src="./images/github-6980894_1280.webp"
+            alt="github-logo"
+          />
+          <img
+            class="imgs"
+            src="./images/LinkedIn_logo_initials.png"
+            alt="linkedln logo"
+          />
+          <img
+            class="imgs"
+            src="./images/768px-Stack_Overflow_icon.svg.png"
+            alt="stack logo"
+          />
+        </div>
+        </aside>
       </div>
-      <aside class="aside">
-        <h2>Connect with Me</h2>
-        <hr />
-        <div class="social">
-          <img class="imgs" src="./images/github-6980894_1280.webp" alt="github-logo" />
-          <img class="imgs" src="./images/LinkedIn_logo_initials.png" alt="linkedln logo" />
-          <img class="imgs" src="./images/768px-Stack_Overflow_icon.svg.png" alt="stack logo" />
-        </div>
-      </aside>
-    </div>
+    </main>
 
     <!-- footer started -->
     <footer>
@@ -81,8 +73,6 @@
         <p>Copyright &copy; 2023 Taleh Huseynov</p>
       </div>
     </footer>
-  </main>
-  <!-- footer finished -->
-</body>
-
+    <!-- footer finished -->
+  </body>
 </html>
